# M1_RayTracing_Duban

./: CMakeLists.txt  command.txt
HAI719I_Raytracer/: Makefile  main  main.cpp  rendu.ppm
HAI719I_Raytracer/img/planesTextures/: bricks.ppm  marbre.ppm  metal.ppm  woodWall.ppm
HAI719I_Raytracer/src/: EnglobingCube.h  Kd_tree.cpp  Kd_tree.h  Line.h  Material.h  Mesh.cpp  Mesh.h  Scene.h  Sphere.h  Square.h  Triangle.h  Vec3.h  matrixUtilities.h
